adicionada funcionalidade para devolver chamados pela chefia que estão em atendimento

--- a/chamadoscmc/templates/fila/index.html
+++ b/chamadoscmc/templates/fila/index.html
@@ -309,6 +309,11 @@
                 devolve(data.chamado_id);
             });
 
+            $('#tchamados tbody').on('click', '#devolve', function () {
+                var data = tableChamados.row( $(this).parents('tr') ).data();
+                devolve(data.chamado_id);
+            });
+
             $('#tchamados tbody').on('click', '#reabre', function () {
                 var data = tableChamados.row( $(this).parents('tr') ).data();
                 reabre(data.chamado_id);
