--- a/chamadoscmc/templates/core/index.html
+++ b/chamadoscmc/templates/core/index.html
@@ -8,7 +8,7 @@
         <div class="panel-heading">Chamados realizados pelo usuário : <b>{{ user }}</b></div>
         <div class="panel-body">
         	<div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-2 col-lg-12">
                 	<table id="tchamados" class="table table-striped table-hover table-bordered fonteTable" width="100%" cellspacing="0"></table>
                 </div>
             </div>
@@ -18,7 +18,7 @@
     <div class="panel panel-primary">
         <div class="panel-body">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-2">
                     <button type="button" class="btn btn-primary" onclick="javascript:criaChamado();">Criar chamado</button>
                 </div>
             </div>
@@ -32,6 +32,9 @@
 	
     $(document).ready(function() {
         tableChamados = $('#tchamados').DataTable({
+            rowReorder: {
+                selector: 'td:nth-child(2)'
+            },
             responsive: true,
             "columns": [
                 {
