--- a/chamadoscmc/templates/core/index.html
+++ b/chamadoscmc/templates/core/index.html
@@ -8,7 +8,7 @@
         <div class="panel-heading">Chamados realizados pelo usuário : <b>{{ user }}</b></div>
         <div class="panel-body">
         	<div class="row">
-                <div class="col-sm-2 col-lg-12">
+                <div class="col-sm-12">
                 	<table id="tchamados" class="table table-striped table-hover table-bordered fonteTable" width="100%" cellspacing="0"></table>
                 </div>
             </div>
@@ -18,7 +18,7 @@
     <div class="panel panel-primary">
         <div class="panel-body">
             <div class="row">
-                <div class="col-sm-2">
+                <div class="col-sm-12">
                     <button type="button" class="btn btn-primary" onclick="javascript:criaChamado();">Criar chamado</button>
                 </div>
             </div>
@@ -152,6 +152,7 @@
                 "url": "/chamado/api/chamados_usuario/{{ user.id }}",
                 "dataSrc": "",
             },
+            "sDom": '<"top"i>rt<"bottom"lp><"clear">',
         });
 
         var tim = setInterval(function() {
