--- a/chamadoscmc/templates/core/edit.html
+++ b/chamadoscmc/templates/core/edit.html
@@ -11,7 +11,11 @@
             <a href="#1" data-toggle="tab">Dados do chamado</a>
         </li>
         <li>
-            <a href="#2" data-toggle="tab">Respostas <span class="badge">{{ num_respostas }}</span></a>
+            {% if num_respostas > 0 %}
+                <a href="#2" data-toggle="tab">Respostas <span class="badge">{{ num_respostas }}</span></a>
+            {% else %}
+                <a href="#2" data-toggle="tab">Respostas</span></a>
+            {% endif %}
         </li>
         <li>
             <a href="#3" data-toggle="tab">Imagens anexadas</a>
