--- a/chamadoscmc/templates/core/index.html
+++ b/chamadoscmc/templates/core/index.html
@@ -9,7 +9,7 @@
         <div class="panel-body">
         	<div class="row">
                 <div class="col-sm-12">
-                	<table id="tchamados" class="table table-striped table-hover table-bordered fonteTable" width="100%" cellspacing="0"></table>
+                	<table id="tchamados" class="table table-striped table-hover table-bordered" width="100%" cellspacing="0"></table>
                 </div>
             </div>
         </div>
@@ -31,10 +31,8 @@
     var tableChamados;
 	
     $(document).ready(function() {
+
         tableChamados = $('#tchamados').DataTable({
-            rowReorder: {
-                selector: 'td:nth-child(2)'
-            },
             responsive: true,
             "columns": [
                 {
@@ -85,14 +83,17 @@
                 {
                     "targets": [0],
                     "visible": true,
+                    "responsivePriority": 1, 
                 },
                 {
                     "targets": [1],
                     "visible": true,
+                    "responsivePriority": 2, 
                 },
                 {
                     "targets": [2],
                     "visible": true,
+
                 },
                 {
                     "targets": [3],
