ajustes tela info chamados

--- a/chamadoscmc/templates/core/detail.html
+++ b/chamadoscmc/templates/core/detail.html
@@ -86,7 +86,7 @@
 
         </div>
 
-        <div class="tab-content" id="2">
+        <div class="tab-pane" id="2">
             <div class="panel panel-primary">
             <div class="panel-heading"><h4>Respostas do chamado : {{ object.id }}</h4></div>
                 <div class="panel-body">
@@ -111,7 +111,7 @@
         </div>
 
 
-        <div class="tab-content" id="3">
+        <div class="tab-pane" id="3">
             <div class="panel panel-primary">
                 <div class="panel-heading"><h4>Imagens anexadas do chamado : {{ object.id }}</h4></div>
                 <div class="panel-body">
