adicionado setor solicitante nos detalhes do chamado

--- a/chamadoscmc/templates/core/detail.html
+++ b/chamadoscmc/templates/core/detail.html
@@ -36,6 +36,9 @@
                             <b>Solicitante: </b>{{ object.usuario }}
                         </li>
                         <li class="list-group-item">
+                            <b>Setor Solicitante: </b>{{ setor_solicitante }}
+                        </li>
+                        <li class="list-group-item">
                             <b>Atendente: </b>{{ atendente }}
                         </li>
                         <li class="list-group-item">
