atualização biblioteca de relatórios

--- a/chamadoscmc/templates/core/relatorio/chamado/index.html
+++ b/chamadoscmc/templates/core/relatorio/chamado/index.html
@@ -10,7 +10,7 @@
         <div class="panel-body">
             <div class="row">
                 <div class="col-sm-12">
-                    <form name="formulario" id="formulario" method="post" action="/chamado/relatorio/">
+                    <form name="formulario" id="formulario" method="post" action="/chamado/relatorio/" target="relatorio">
                         {% crispy form %}
                     </form>
                 </div>
