controle de acesso indevido. closes #174

--- a/chamadoscmc/templates/fila/index.html
+++ b/chamadoscmc/templates/fila/index.html
@@ -235,7 +235,7 @@
         				title: "Aberto",
         				data: "chamado_data_abertura",
                         render: function(data, type, full, meta) {
-                            return '<a href="/chamado/detalhe/' + full.chamado_id + '/">'+ moment(data).format('DD/MM/YYYY HH:mm') + '</a>';
+                            return '<a href="/chamado/edita/' + full.chamado_id + '/">'+ moment(data).format('DD/MM/YYYY HH:mm') + '</a>';
                         }
         			},
         			{ 
