--- a/chamadoscmc/templates/core/edit.html
+++ b/chamadoscmc/templates/core/edit.html
@@ -20,6 +20,9 @@
         <li>
             <a href="#3" data-toggle="tab">Imagens anexadas</a>
         </li>
+        <li>
+            <a href="#4" data-toggle="tab">Assinaturas</a>
+        </li>
     </ul>
     <br/>
     <div class="tab-content">
@@ -131,13 +134,39 @@
                     </div>
                 </div>
             </div>
-
         </div>
+
+        <div class="tab-pane" id="4">
+            <div class="panel panel-primary">
+            <div class="panel-heading"><h4>Assinaturas do chamado : {{ object.id }}</h4></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <table id="tassinaturas" class="table table-striped table-hover table-bordered fonteTable" width="100%" cellspacing="0"></table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-primary">
+                <div class="panel-body">
+                    <div class="row"> 
+                        <div class="form-group"> 
+                            <div class="col-sm-12">
+                                <input type="button" onclick="javascript:volta_fila();" value="Voltar à fila" class="btn btn-default"/> 
+                                <input type="button" onclick="javascript:fecha_chamado();" value="Fechar chamado" class="btn btn-primary"/>
+                                <input type="button" data-toggle="modal" data-target="#assinaturaModal" data-chamado_id="{{ object.id }}" value="Nova assinatura" class="btn btn-default"/> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     </div>
 </div>
 
-<!-- Modal -->
+<!-- Modal resposta -->
 <div class="modal fade" id="respostaModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -168,12 +197,44 @@
   </div>
 </div>
 
+<!-- Modal assinatura -->
+<div class="modal fade" id="assinaturaModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="exampleModalLabel">Nova assinatura</h4>
+      </div>
+      <div class="modal-body">
+        <form class="assinatura">{% csrf_token %}
+          <div class="form-group">
+            <input type="hidden" name="id_chamado" id="id_chamado" value="{{ object.id }}" />
+            <label for="assinatura" class="control-label">Assinatura:</label>
+            <select name="selectassinatura" id="selectassinatura" >
+            </select>
+          </div>
+        </form>
+        <form class="excluiAssinatura" method="POST">{% csrf_token %}
+            <input type="hidden" name="assinatura_id" id="assinatura_id" value="11111"/>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary" id="submit" onclick="javascript:submeteAssinatura();">Salvar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
 
 {% block extra_javascript %}
 
 <script type="text/javascript">
+
     var tableRespostas;
+    var tableAssinaturas;
+
     $(document).ready(function() {
         desabilita();
         tableRespostas = $('#trespostas').DataTable({
@@ -254,6 +315,70 @@
             },
         });
 
+        tableAssinaturas = $('#tassinaturas').DataTable({
+            responsive: true,
+            "columns": [
+                { 
+                    title: "id_assinatura" ,
+                    data: 'assinatura_id'
+                },
+                { 
+                    title: "id_chamado" ,
+                    data: 'chamado_id'
+                },
+                { 
+                    title: "Assinatura",
+                    data: 'email'
+                },
+            ],
+            "columnDefs": [
+                {
+                    "targets": [0],
+                    "visible": false,
+                },
+                {
+                    "targets": [1],
+                    "visible": false,
+                },
+                {
+                    "targets": [2],
+                    "visible": true,
+                },
+                {
+                    "targets": [3],
+                    "visible": true,
+                    "searchable": false,
+                    "className": "dt-center",
+                    "data": null,
+                    render: function(data, type, full, meta) {
+                        return '<a href="javascript:excluiAssinatura(' + full.assinatura_id + ');"><i class="far fa-trash-alt" aria-hidden="true" style="color:Tomato;" title="Exclui Assinatura"></i></a>';
+                    }
+                },
+
+
+            ],
+            "language": {
+                "info": "Páginas _PAGE_ de _PAGES_",
+                "emptyTable": "Sem assinaturas para o chamado",
+                "decimal": ",",
+                "thousands": ".",
+                "oPaginate": {
+                    "sFirst": '<span class="glyphicon glyphicon-fast-backward"></span>',
+                    "sLast": '<span class="glyphicon glyphicon-fast-forward"></span>',
+                    "sNext": '<span class="glyphicon glyphicon-forward"></span>',
+                    "sPrevious": '<span class="glyphicon glyphicon-backward"></span>'
+                }
+            },
+            "bPaginate" : true,
+            "bLengthChange": false,
+            "bFilter": false,
+            "bInfo": false,
+            "ajax": {
+                "url": "/fila/api/assinaturas/{{ object.id }}/",
+                "dataSrc": "",
+            },
+        });
+
         $("#arquivos").fileinput({
             language: "pt-BR",
             showUpload: false, 
@@ -274,6 +399,8 @@
             ]
 
         });
+
+        $('.selectpicker').selectpicker();
 
     });
 
@@ -313,6 +440,18 @@
         }, 500);
     });
 
+    $('#assinaturaModal').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget);
+        var recipient = button.data('chamado_id');
+        var modal = $(this);
+        modal.find('.modal-title').text('Assinatura para o chamado:  ' + recipient);
+
+        setTimeout(function (){
+            $('#selectassinatura').focus();
+        }, 500);
+        montaComboAssinatura();
+    });
+
     function responde() {
         request_url = '/fila/api/responde/';
 
@@ -323,7 +462,6 @@
             dataType: 'json',
             data: $('form.resposta').serialize(),
             success: function(result){
-                console.log($('form.resposta').serialize());
                 tableRespostas.ajax.reload(null, false);
             },
             error: function(xhr, status, error) {
@@ -334,6 +472,81 @@
         })
     }
 
+    function submeteAssinatura() {
+        assina();
+        $("#assinaturaModal").modal('hide');
+    }
+
+
+    function montaComboAssinatura() {
+        var request_url = '/fila/api/consome_usuarios_ldap/';
+
+        $.ajax({
+            url: request_url,
+            dataType: 'json',
+            success: function(result){
+                var toAppend = '';
+                $.each(result, function(index, element) {
+                    toAppend += '<option value="' + element.mail + '">' + element.cn + '</option>';
+                });
+                $('#selectassinatura').empty();
+                $('#selectassinatura').append(toAppend);
+                $('#selectassinatura').attr('data-live-search', 'true');
+                $('#selectassinatura').selectpicker();
+
+
+            },
+            error: function(xhr, status, error) {
+                console.log('Erro ao carregar dados LDAP');
+                console.log(xhr.readyState);
+                console.log(status);
+                console.log(error);
+            }
+        })
+    }
+
+    function assina() {
+        request_url = '/fila/api/assina/';
+
+        $.ajax({
+            url: request_url,
+            type: 'POST',
+            accepts: 'application/json',
+            dataType: 'json',
+            data: $('form.assinatura').serialize(),
+            success: function(result){
+                tableAssinaturas.ajax.reload(null, false);
+            },
+            error: function(xhr, status, error) {
+                console.log(status);
+                console.log(error);
+                console.log(xhr);
+            }
+        })
+    }
+
+    function excluiAssinatura(id) {
+        request_url = '/fila/api/exclui_assina/';
+
+        $('#assinatura_id').val(id);
+
+        $.ajax({
+            url: request_url,
+            type: 'POST',
+            accepts: 'application/json',
+            dataType: 'json',
+            data: $('form.excluiAssinatura').serialize(),
+            success: function(result){
+                tableAssinaturas.ajax.reload(null, false);
+            },
+            error: function(xhr, status, error) {
+                console.log(status);
+                console.log(error);
+                console.log(xhr);
+            }
+        })
+
+    }
 
 </script>
 
