--- a/chamadoscmc/templates/core/new.html
+++ b/chamadoscmc/templates/core/new.html
@@ -73,7 +73,8 @@
 			url: request_url,
 			dataType: 'json',
 			success: function(result){
-				var toAppend = '';
+				//var toAppend = '';
+				var toAppend = '<option value="" selected>Selecione...</option>';
 				$.each(result, function(index, element) {
                     if (element.gs_id == valor_grupo) {
 					   toAppend += '<option value="' + element.gs_id + '" selected>' + element.gs_descricao + '</option>';
@@ -106,7 +107,8 @@
 			url: request_url,
 			dataType: 'json',
 			success: function(result){
-				var toAppend = '';
+				//var toAppend = '';
+				var toAppend = '<option value="" selected>Selecione...</option>';
 				$.each(result, function(index, element) {
 					if (element.servico_id == valor_servico)
 						toAppend += '<option value="' + element.servico_id + '" selected>' + element.servico_descricao + '</option>';
