--- a/chamadoscmc/templates/core/detail.html
+++ b/chamadoscmc/templates/core/detail.html
@@ -48,7 +48,7 @@
                             <b>Ramal: </b>{{ object.ramal }}
                         </li>
                         <li class="list-group-item">
-                            <b>Setor</b>: {{ object.setor }}
+                            <b>Setor Destino</b>: {{ object.setor }}
                         </li>
                         <li class="list-group-item">
                             <b>Grupo de serviço: </b>{{ object.grupo_servico }}
