closes #194 e adicionado setor solicitante e setor destino nos dados do chamado (fila)

--- a/chamadoscmc/templates/core/edit.html
+++ b/chamadoscmc/templates/core/edit.html
@@ -44,7 +44,10 @@
                         <b>Ramal: </b>{{ object.ramal }}
                     </li>
                     <li class="list-group-item">
-                        <b>Setor</b>: {{ object.setor }}
+                        <b>Setor Solicitante: </b>{{ setor_solicitante }}
+                    </li>
+                    <li class="list-group-item">
+                        <b>Setor Destino</b>: {{ object.setor }}
                     </li>
                     <li class="list-group-item">
                         <b>Grupo de serviço: </b>{{ object.grupo_servico }}
